--- a/config/config.toml
+++ b/config/config.toml
@@ -5,9 +5,9 @@ port = 8080
     level = "debug"
     filename = "api-gateway.log"
 
-[redis]
-    addrs = ["redis-sts-0.redis.default:7000", "redis-sts-1.redis.default:7000", "redis-sts-2.redis.default:7000"]
-    password = "HZB183318a."
+#[redis]
+#    addrs = ["redis-sts-0.redis.default:7000", "redis-sts-1.redis.default:7000", "redis-sts-2.redis.default:7000"]
+#    password = "HZB183318a."
 
 [[endpoints]]
     name = "blog"
